building out react

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,3 @@
-<div id="screen">
-  <h1>Wordle (clone)</h1>
-  <div id="grid"></div>
-  <div id="keyboard"></div>
-</div>
+<div id="root"></div>
 <link href="style.css" rel="stylesheet"></link>
-<script src="index.js" type="module"></script>
+<script src="react.js" type="module"></script>
